--- a/UI/static/css/layout.css
+++ b/UI/static/css/layout.css
@@ -105,6 +105,7 @@ body{
     background: rgba(241, 235, 235, 0.11);
     padding:20px 20px;
     overflow-y: auto;
+    border-radius: 15px;
 }
 .mainbar #main-body{
     display: flex;
