--- a/UI/components/groups.html
+++ b/UI/components/groups.html
@@ -1,11 +1,57 @@
-<table style="width:50%">
-  <caption>User Groups</caption>
-  <tr>
-    <td>DEV Team</td>
-    <td>Group for app developers</td>
-  </tr>
-  <tr>
-    <td>HR Team</td>
-    <td class="msg-body">Group for personel skill department</td>
-  </tr>
-</table>
+<div class="groups-container">
+  <div class="groups-view">
+      <table style="width:90%">
+          <caption>User Groups</caption>
+          <tr>
+            <td>DEV Team</td>
+            <td>Group for app developers</td>
+            <td>34</td>
+          </tr>
+          <tr>
+            <td>HR Team</td>
+            <td>Group for personel skill department</td>
+            <td>32</td>
+          </tr>
+        </table>
+  </div>
+  <div class="groups-section">
+    <div class="action">
+        <div class="item" onclick="addGroup()">
+          Add Group
+        </div>
+        <div class="item" onclick="addMembertoGroup()">
+            Add Member
+        </div>
+    </div>
+    <div class="groups-forms">
+      <div id="create-group-container">
+          <div class="form-holder">
+              <input type="text" class="form-holder-item" id="group-name" 
+                  placeholder="Group name" minlength="4" maxlength="15" required/>
+          </div>
+          <div class="form-holder">
+              <textarea placeholder="Group Description" 
+                id="group-description" style="width: 100%;height: 6vh;"></textarea>
+            </div>
+          <div class="form-holder ">
+              <button type="button" class="form-holder-item">Create</input>
+         </div>
+      </div>
+      <div id="add-member-container">
+
+          <div class="form-holder">
+              <select class="form-holder-item" id="member-group-name" >
+                  <option>Group Name</option>
+              </select>
+          </div>
+          <div class="form-holder">
+              <input type="text" class="form-holder-item" id="member-user-name" 
+                  placeholder="Member Name" minlength="4" maxlength="15" required/>
+          </div>
+          <div class="form-holder ">
+              <button type="button" class="form-holder-item">Add</input>
+         </div>
+      </div>
+    </div>
+  </div>
+</div>
