[#164728068] Removed bg-image to background-color

--- a/UI/static/css/login.css
+++ b/UI/static/css/login.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('../images/bg-login.jpg');
+    background-color:#3379f5;
 	background-repeat:no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
