--- a/UI/static/css/login.css
+++ b/UI/static/css/login.css
@@ -101,8 +101,24 @@ button.form-holder-item{
 
 .step-down{
     margin-top: 30px;
+    display: flex;
+    flex-direction:column;
 }
 
+.step-down a{
+    margin: 10px 0;
+}
+.step-down a.no__account{
+    margin: 10px;
+    margin-top: 20px;
+    color: #e2dede;
+}
+
+.step-down a.forgot_password{
+    margin: 10px;
+    margin-top: 20px;
+    color: #a09a9a;
+}
 .modal {
     display: none;
     position: fixed;
