--- a/UI/components/compose.html
+++ b/UI/components/compose.html
@@ -1,20 +1,6 @@
 <div class="compose-message-container">
-    <div class="message-bar">
-        <div class="title">
-                Equals to the Message Subject
-        </div>
-        <div class="actions">
-            <div class="item">
-                    Send
-            </div>
-            <div class="item">
-                    Save
-            </div>
-        </div>
-    </div>
     <div class="msg-receiver">
         <div class="form-holder">
-            <label class="form-holder-label"></label>
             <input type="text" class="form-holder-item" id="user-name" 
                 placeholder="Email to.." minlength="12" maxlength="300" required/>
         </div>
@@ -22,7 +8,6 @@
 
     <div class="msg-subject">
         <div class="form-holder">
-            <label class="form-holder-label"></label>
             <input type="text" class="form-holder-item" id="user-name" 
                     placeholder="Subject" minlength="4" maxlength="200" required/>
         </div>
@@ -31,5 +16,14 @@
     <div class="msg-body">
         <textarea  class="form-holder-item" placeholder="Message body"></textarea>
     </div>    
-
+    <div class="message-bar">
+        <div class="actions">
+            <div class="item">
+                    Send
+            </div>
+            <div class="item">
+                    Save As Draft
+            </div>
+        </div>
+    </div>
 </div>
