--- a/UI/static/css/layout.css
+++ b/UI/static/css/layout.css
@@ -1,5 +1,5 @@
 body{
-    background-image:url('../images/bg-login.jpg');
+    background-color:#3379f5;
 	background-repeat:no-repeat;
 	background-size: cover;
 	background-attachment: fixed;
@@ -15,7 +15,7 @@ body{
 .header{
     width: 100%;
     height:8vh;
-    background: rgba(241, 235, 235, 0.11);
+    background: rgba(241, 235, 235, 0.69);
     display: flex;
     flex-direction: row;
     width:100%;
@@ -32,7 +32,7 @@ body{
 
 .header .logo h3{
     margin-left:15px;
-    color:#fff;
+    color:#222;
 }
 
 .header .nav{
@@ -45,7 +45,7 @@ body{
     min-width: 60px;
     margin: 10px;
     text-align: center;
-    color:#fff;
+    color:#222;
     font-size: 1.07em;
     line-height: 2.00em;
 }
@@ -71,14 +71,14 @@ body{
     align-items: center;
     width:20%; 
     height: 100%; 
-    background: rgba(241, 235, 235, 0.11);
+    background: rgba(241, 235, 235, 0.69);
     border-radius: 15px;
 }
 .sidebar .menu-item{
     width:60%;
     margin: 5px 0;
     text-align: left;
-    color:#fff;
+    color:#222;
     font-size: 0.90em;
     line-height: 2.00em;
     padding:0 20px;
@@ -102,7 +102,7 @@ body{
     flex-direction: row; 
     width:74%;  
     height:93%;
-    background: rgba(241, 235, 235, 0.11);
+    background: rgba(241, 235, 235, 0.69);
     padding:20px 20px;
     overflow-y: auto;
     border-radius: 15px;
@@ -132,11 +132,12 @@ table {
     font-size: 0.90em;
   }
   tr{
-    background:rgba(99, 99, 103, 0.5215);
-    border-bottom: 1px solid #444;
+    background: rgb(51, 121, 245);
+    border-bottom: 1px solid #eae2e2;
+    color: #222;
   }
   tr:hover{
-    background:rgba(99, 99, 103, 0.9215);
+    background:rgba(51, 121, 245, 0.7);
     cursor: pointer;
   }
   td, th {
@@ -157,7 +158,8 @@ table {
     float: left;
     padding:10px 0;
     text-transform: capitalize;
-    color:#fff;
+    color:#222;
+    font-size: 20px;
   }
 
   error{
@@ -423,9 +425,8 @@ button.form-holder-item{
 .compose-message-container .message-bar{
     display: flex;
     flex-direction: row;
-    padding: 5px 15px;
+    padding: 15px 0px;
     margin-top: 10px;
-    background-color: rgba(99, 99, 103, 0.5215);
     color: #111;
 }
 
@@ -438,12 +439,11 @@ button.form-holder-item{
 
 .compose-message-container .message-bar .actions{
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     flex-grow: 2;
     flex-direction: row;
     align-content: space-between;
   }
-
 .compose-message-container .message-bar .actions .item{
     flex-grow: 0;
     margin: 0 5px;
@@ -454,6 +454,8 @@ button.form-holder-item{
     line-height: 2.1rem;
     padding: 0 5px;
     border-radius: 5px;
+    width: 100px;
+    text-align: center;
   }
 
 .compose-message-container .message-bar .actions .item:hover{
