--- a/UI/static/css/login.css
+++ b/UI/static/css/login.css
@@ -23,7 +23,7 @@ body{
 }
 
 .box{  
-    background:rgba(0, 0, 0, 0.51);
+    background-color: rgba(241, 235, 235, 0.69);
     width: 400px;
     min-height: 300px;
     border-radius:10px;
@@ -33,7 +33,7 @@ body{
     padding:80px 80px;
 }
 .signup-form{
-    padding:80px 40px;
+    padding:50px 70px;
 }
 
 .form-holder{
@@ -108,16 +108,17 @@ button.form-holder-item{
 .step-down a{
     margin: 10px 0;
 }
-.step-down a.no__account{
+.step-down a.no__account,
+.step-down a.login{
     margin: 10px;
     margin-top: 20px;
-    color: #e2dede;
+    color: #444;
 }
 
 .step-down a.forgot_password{
     margin: 10px;
     margin-top: 20px;
-    color: #a09a9a;
+    color: #3379f5;
 }
 .modal {
     display: none;
