update table width to 900px [#165078960]

--- a/UI/static/css/layout.css
+++ b/UI/static/css/layout.css
@@ -130,6 +130,7 @@ table {
     border-collapse: collapse;
     width: 100%;
     font-size: 0.90em;
+    min-width: 900px;
   }
   tr{
     background: rgb(51, 121, 245);
