refactored onclick method [#165083987]

--- a/UI/components/compose.html
+++ b/UI/components/compose.html
@@ -19,10 +19,10 @@
     <div class="message-bar">
         <div class="actions">
             <div class="item">
-                <div id="send_message" onclick="sendMessage()">Send</div>
+                <div id="send_message" onclick="sendMessage('send')">Send</div>
             </div>
             <div class="item">
-                <div id="save_message" onclick="saveMessage()">Save As Draft</div>
+                <div id="save_message" onclick="sendMessage('save')">Save As Draft</div>
             </div>
         </div>
     </div>
