adds UI redesign [#165083987]

--- a/UI/components/groups.html
+++ b/UI/components/groups.html
@@ -1,16 +1,18 @@
 <div class="groups-container">
-  <div class="groups-view">
+  <div class="groups-view" id="group-list">
       <table style="min-width:400px !important;">
           <caption>User Groups</caption>
           <tr>
             <td>DEV Team</td>
             <td>Group for app developers</td>
-            <td>34</td>
+            <td class='td-action positive'><i class="far fa-paper-plane"></i></td>
+            <td class='td-action'><i class="far fa-trash-alt"></i></td>
           </tr>
           <tr>
             <td>HR Team</td>
             <td>Group for personel skill department</td>
-            <td>32</td>
+            <td class='td-action positive'><i class="far fa-paper-plane"></i></td>
+            <td class='td-action'><i class="far fa-trash-alt"></i></td>
           </tr>
         </table>
   </div>
@@ -31,7 +33,7 @@
                   placeholder="Group name" minlength="4" maxlength="15" required/>
           </div>
           <div class="form-holder">
-              <textarea placeholder="Group Description" 
+              <textarea placeholder="Group Role" 
                 id="group-description" style="width: 100%;height: 6vh;"></textarea>
             </div>
           <div class="form-holder ">
