--- a/UI/static/css/login.css
+++ b/UI/static/css/login.css
@@ -1,32 +1,29 @@
 body{
-    background-color:#3379f5;
-	background-repeat:no-repeat;
-	background-size: cover;
-	background-attachment: fixed;
+    background-color: #eef0f1;
+    background-repeat:no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     font-family:Raleway, Open Sans, Droid Sans, Roboto,arial, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 97.7vh;
     flex-direction: column;
-
 }
 .logo{
-    width: 400px;
     min-height: 80px;
-    border-radius:5px;
-    color:#fff;
+    color: #3379f5;
     font-size: 2em;
     text-align: center;
     font-weight: 900;
     font-family:Roboto;
 }
 
-.box{  
-    background-color: rgba(241, 235, 235, 0.69);
+.box{
+    background-color: #b6c7ee;
     width: 400px;
     min-height: 300px;
-    border-radius:10px;
+    /*border-radius:10px;*/
 }
 
 .login-form{
@@ -48,30 +45,28 @@ body{
 .form-holder-label{
     flex-grow: 1;
     background-color: #3379f5;
-    height: 5vh;
+    height: 4.6vh;
     text-align: center;
-    line-height: 4.9vh;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    padding: 2px;
+    line-height: 4.6vh;
+    padding: 2px 4px;
     font-size: 0.9rem;
-    color:#fff;
+    color: #fff;
 }
 .form-holder-label.email{
-    border-top-left-radius: 0px;
+    /*border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
     border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-bottom-right-radius: 5px;*/
     padding: 2px 10px;
-    font-size: 16px;
+    font-size: 18px;
 }
 .form-holder-item{
     flex-grow: 8;
-    padding:3px 4px;
+    padding:2px 3px;
     line-height: 4vh;
-    border-top-right-radius: 5px;
+    /*border-top-right-radius: 5px;*/
     font-size:15px;
-    border-bottom-right-radius: 5px;
+    /*border-bottom-right-radius: 5px;*/
 }
 
 .form-holder-action{
@@ -84,7 +79,7 @@ a.form-holder-action{
 }
 button.form-holder-item{
     margin-top:35px;
-    border-radius: 5px;
+    /*border-radius: 5px;*/
     width:80%;
     border-width: 0px;
     border-style: outset;
@@ -125,7 +120,7 @@ button.form-holder-item{
 .step-down a.forgot_password{
     margin: 10px;
     margin-top: 20px;
-    color: #3379f5;
+    color: #ffffff;
 }
 .modal {
     display: none;
@@ -168,9 +163,9 @@ button.form-holder-item{
 .recover-button{
     width: 15%;
     margin: 0;
-    border-radius: 0px;
+    /*border-radius: 0px;
     border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-bottom-right-radius: 10px;*/
     padding: 6px 0;
     border-width: 0px;
     border-style: outset;
