add delete group functionality

--- a/UI/components/groups.html
+++ b/UI/components/groups.html
@@ -1,6 +1,6 @@
 <div class="groups-container">
   <div class="groups-view" id="group-list">
-
+      Loading...
   </div>
   <div class="groups-section">
     <div class="action">
