--- a/UI/components/groups.html
+++ b/UI/components/groups.html
@@ -33,7 +33,7 @@
                   <option>Group Name</option>
               </select>
           </div>
-          <div class="form-holder">
+          <div class="form-holder" id="users-selector">
               <input type="text" class="form-holder-item" id="member-user-name" 
                   placeholder="Member Name" minlength="4" maxlength="15" list="user-list" required/>
               <datalist id="user-list">
