--- a/UI/components/compose.html
+++ b/UI/components/compose.html
@@ -1,4 +1,5 @@
 <div class="compose-message-container">
+    <div id="message-status"></div>
     <div class="msg-receiver">
         <div class="form-holder">
             <input type="text" class="form-holder-item" id="msg-receiver" 
