--- a/UI/static/css/login.css
+++ b/UI/static/css/login.css
@@ -185,3 +185,17 @@ button.form-holder-item{
 #pass-status{
     display: none
 }
+error,success{
+    color: #F44336;
+    padding: 5px 10px;
+    background: #efe3e3;
+    /*border-radius: 5px;*/
+    text-align: center;
+    font-size: 0.9em;
+    width: 60%;
+    margin: auto;
+  }
+  success{
+    color: #444;
+    background: #b0ef3b4d;
+  }
