--- a/UI/components/compose.html
+++ b/UI/components/compose.html
@@ -20,10 +20,16 @@
     <div class="message-bar">
         <div class="actions">
             <div class="item">
-                <div id="send_message" onclick="sendMessage('send')">Send</div>
+                <button type="button" id="send_message" 
+                    onclick="sendMessage('send')" class="form-holder-item" style="margin-top:0;width:100%;">Send
+                </button>
             </div>
             <div class="item">
-                <div id="save_message" onclick="sendMessage('save')">Save As Draft</div>
+                <button type="button" id="save_message" 
+                    onclick="sendMessage('save')" class="form-holder-item" 
+                    style="margin-top:0;width:100%">
+                    Save As Draft
+                </button>
             </div>
         </div>
     </div>
